2000-10-24  Jim Meyering  <meyering@lucent.com>

	Fix a bug, introduced with my fix of 2000-07-10, whereby -kk would
	sometimes be ignored for some of the files involved in an update.

	* update.c (join_file): Restore the original value of `options'
	right after calling checkout_file.
	* sanity.sh (join-admin-2): New test for this.

2000-10-23  Derek Price  <derek.price@openavenue.com>
            James Youngman  <jay@gnu.org>

	* sanity.sh: it's /gnu/bin, not /gun/bin.  Thanks go to James Youngman
	<jay@gnu.org> for the bug report and patch.

2000-10-20  Jim Kingdon  <http://sourceforge.net/users/kingdon/>

	* server.c (switch_to_user): Set CVS_USER.  Patch from Sudish
	Joseph and popularized by dozens (e.g. mozilla.org, also others).

2000-10-20  Derek Price  <derek.price@openavenue.com>
            KOIE Hidetaka  <hide@koie.org>

	* root.c (normalize_cvsroot): plug a memory leak.  Thanks to
	KOIE Hidetaka <hide@koie.org>

2000-10-18  Derek Price  <derek.price@openavenue.com>

	* client.c (connect_to_pserver): added a close brace the lack of which
	was preventing compilation when gssapi was enabled.  Removed a
	redundant check for HAVE_KERBEROS.

2000-10-18  Derek Price  <derek.price@openavenue.com>

	* root.c (normalize_cvsroot): removed references to free_port_s and the
	now useless call to free now that port_s is on the stack.  Thanks to
	Jon Miner.

2000-10-18  Derek Price  <derek.price@openavenue.com>

	* root.c (normalize_cvsroot): remove calls to snprintf for
	compatibility with M$ Windoze.

2000-10-18  Derek Price  <derek.price@openavenue.com>

	* sanity.sh (crerepos-6a, crerepos-6a-r): fix a "?" in a regex & pipe
	the output of a test to /dev/null since we don't know what error
	messages specific rsh implementations will output.

2000-10-17  Derek Price  <derek.price@openavenue.com>

	* cvs.h: added CVSroot_password variable. Provided prototypes for
	get_port_number & normalize_cvsroot.